# libkmahjongg

./: .gitignore  .kde-ci.yml  CMakeLists.txt  KF5KMahjongglibConfig.cmake.in  Mainpage.dox  Messages.sh  README  kmahjonggbackground.cpp  kmahjonggbackground.h  kmahjonggbackgroundselector.cpp  kmahjonggbackgroundselector.h  kmahjonggbackgroundselector.ui  kmahjonggconfigdialog.cpp  kmahjonggconfigdialog.h  kmahjonggtileset.cpp  kmahjonggtileset.h  kmahjonggtilesetselector.cpp  kmahjonggtilesetselector.h  kmahjonggtilesetselector.ui  libkmahjong_debug.cpp  libkmahjong_debug.h  libkmahjongg.categories  libkmahjongg_debug.cpp  libkmahjongg_debug.h  libkmahjongg_export.h  metainfo.yaml
backgrounds/: CMakeLists.txt  CompareBackgroundSVGs.cmake  chinese_landscape.copyright  chinese_landscape.desktop  chinese_landscape.svgz  color_plain.desktop  default.desktop  default_old.desktop  egyptian.copyright  egyptian.desktop  egyptian.svgz  summerfield.copyright  summerfield.desktop  wood_light.copyright  wood_light.desktop
cmake/: InternalMacros.cmake
po/ar/: libkmahjongg5.po  libkmahjongg6.po
po/ast/: libkmahjongg6.po
po/be/: libkmahjongg5.po  libkmahjongg6.po
po/bg/: libkmahjongg5.po  libkmahjongg6.po
po/bs/: libkmahjongg5.po  libkmahjongg6.po
po/ca/: libkmahjongg5.po  libkmahjongg6.po
po/ca@valencia/: libkmahjongg5.po  libkmahjongg6.po
po/cs/: libkmahjongg5.po  libkmahjongg6.po
po/csb/: libkmahjongg5.po  libkmahjongg6.po
po/da/: libkmahjongg5.po  libkmahjongg6.po
po/de/: libkmahjongg5.po  libkmahjongg6.po
po/el/: libkmahjongg5.po  libkmahjongg6.po
po/en_GB/: libkmahjongg5.po  libkmahjongg6.po
po/eo/: libkmahjongg5.po  libkmahjongg6.po
po/es/: libkmahjongg5.po  libkmahjongg6.po
po/et/: libkmahjongg5.po  libkmahjongg6.po
po/eu/: libkmahjongg5.po  libkmahjongg6.po
po/fi/: libkmahjongg5.po  libkmahjongg6.po
po/fr/: libkmahjongg5.po  libkmahjongg6.po
po/ga/: libkmahjongg5.po  libkmahjongg6.po
po/gl/: libkmahjongg5.po  libkmahjongg6.po
po/gu/: libkmahjongg5.po  libkmahjongg6.po
po/he/: libkmahjongg6.po
po/hi/: libkmahjongg5.po  libkmahjongg6.po
po/hne/: libkmahjongg5.po  libkmahjongg6.po
po/hr/: libkmahjongg5.po  libkmahjongg6.po
po/hu/: libkmahjongg5.po  libkmahjongg6.po
po/ia/: libkmahjongg6.po
po/id/: libkmahjongg5.po  libkmahjongg6.po
po/is/: libkmahjongg5.po  libkmahjongg6.po
po/it/: libkmahjongg5.po  libkmahjongg6.po
po/ja/: libkmahjongg5.po  libkmahjongg6.po
po/ka/: libkmahjongg5.po  libkmahjongg6.po
po/kk/: libkmahjongg5.po  libkmahjongg6.po
po/km/: libkmahjongg5.po  libkmahjongg6.po
po/ko/: libkmahjongg5.po  libkmahjongg6.po
po/lt/: libkmahjongg5.po  libkmahjongg6.po
po/lv/: libkmahjongg5.po  libkmahjongg6.po
po/mai/: libkmahjongg5.po  libkmahjongg6.po
po/ml/: libkmahjongg5.po  libkmahjongg6.po
po/mr/: libkmahjongg5.po  libkmahjongg6.po
po/nb/: libkmahjongg5.po  libkmahjongg6.po
po/nds/: libkmahjongg5.po  libkmahjongg6.po
po/nl/: libkmahjongg5.po  libkmahjongg6.po
po/nn/: libkmahjongg5.po  libkmahjongg6.po
po/oc/: libkmahjongg5.po  libkmahjongg6.po
po/pl/: libkmahjongg5.po  libkmahjongg6.po
po/pt/: libkmahjongg5.po  libkmahjongg6.po
po/pt_BR/: libkmahjongg5.po  libkmahjongg6.po
po/ro/: libkmahjongg5.po  libkmahjongg6.po
po/ru/: libkmahjongg5.po  libkmahjongg6.po
po/sa/: libkmahjongg6.po
po/se/: libkmahjongg5.po  libkmahjongg6.po
po/sk/: libkmahjongg5.po  libkmahjongg6.po
po/sl/: libkmahjongg5.po  libkmahjongg6.po
po/sq/: libkmahjongg5.po  libkmahjongg6.po
po/sr/: libkmahjongg5.po  libkmahjongg6.po
po/sr@ijekavian/: libkmahjongg5.po  libkmahjongg6.po
po/sr@ijekavianlatin/: libkmahjongg5.po  libkmahjongg6.po
po/sr@latin/: libkmahjongg5.po  libkmahjongg6.po
po/sv/: libkmahjongg5.po  libkmahjongg6.po
po/th/: libkmahjongg5.po  libkmahjongg6.po
po/tr/: libkmahjongg5.po  libkmahjongg6.po
po/ug/: libkmahjongg5.po  libkmahjongg6.po
po/uk/: libkmahjongg5.po  libkmahjongg6.po
po/wa/: libkmahjongg5.po  libkmahjongg6.po
po/zh_CN/: libkmahjongg5.po  libkmahjongg6.po
po/zh_TW/: libkmahjongg5.po  libkmahjongg6.po
src/: CMakeLists.txt  KF5KMahjongglibConfig.cmake.in  KMahjongglibConfig.cmake.in  Messages.sh  kmahjonggbackground.cpp  kmahjonggbackground.h  kmahjonggbackgroundselector.cpp  kmahjonggbackgroundselector.h  kmahjonggbackgroundselector.ui  kmahjonggconfigdialog.cpp  kmahjonggconfigdialog.h  kmahjonggtileset.cpp  kmahjonggtileset.h  kmahjonggtilesetselector.cpp  kmahjonggtilesetselector.h  kmahjonggtilesetselector.ui
src/tools/: CMakeLists.txt  renderelement.cpp
tilesets/: CMakeLists.txt  CompareTilesetsSVGs.cmake  alphabet.desktop  alphabet.svgz  bamboo.desktop  bamboo.svgz  classic.desktop  default.desktop  default.svgz  egypt.desktop  egypt.svgz  jade.copyright  jade.desktop  jade.svgz  traditional.desktop  traditional.svgz
